--- a/templates/nginx-vhost.conf.j2
+++ b/templates/nginx-vhost.conf.j2
@@ -11,7 +11,7 @@ server {
         try_files $uri /app.php$is_args$args;
     }
 
-    {% if symfony_environment !== 'production' %}
+    {% if symfony_environment != 'production' %}
     # DEV
     # This rule should only be placed on your development environment
     # In production, don't include this and don't deploy app_dev.php or config.php
